--- a/example/css/example.css
+++ b/example/css/example.css
@@ -5318,14 +5318,12 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   bottom: 1rem;
   right: 1rem;
   background-color: #DD4B39;
-  height: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
+  border-radius: 50px;
   color: #FFFFFF;
   font-weight: bold;
-  padding: 0.25rem;
+  padding: 0rem 0.25rem;
+  text-align: center;
+  min-width: 1.25rem;
 }
 
 .logo, .profile, .alert, .mobile-sidebar--button {
@@ -5361,7 +5359,7 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   }
 }
 
-.sidebar-nav li i:before, .mobile-sidebar-nav li i:before, .profile i:before, .alert i:before {
+.mobile-sidebar--button i:before, .sidebar-nav li i:before, .mobile-sidebar-nav li i:before, .profile i:before, .alert i:before {
   color: #FFFFFF;
 }
 
@@ -5391,6 +5389,7 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   display: flex;
   align-items: center;
   padding: 0.5rem;
+  position: relative;
 }
 .header .title, .header .action {
   display: none;
@@ -5456,7 +5455,7 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   }
 }
 .fullscreen .header .title {
-  display: initial;
+  display: inline;
   text-align: left;
   width: 100%;
   color: #FFFFFF;
@@ -5470,10 +5469,10 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   }
 }
 .fullscreen .header .action {
-  display: initial;
-  position: fixed;
-  right: 0.5rem;
+  display: block;
+  position: absolute;
   top: auto;
+  right: 0.5rem;
 }
 .fullscreen .logo, .fullscreen .alert, .fullscreen .profile, .fullscreen .mobile-sidebar--button {
   display: none;
@@ -5496,7 +5495,7 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   padding: 0;
 }
 .sidebar-nav li, .mobile-sidebar-nav li {
-  padding-left: 1rem;
+  padding-left: 0.5rem;
   height: 2.5rem;
   display: flex;
   align-items: center;
@@ -5547,7 +5546,7 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
 }
 .mobile-overlay .mobile-profile {
   width: 100%;
-  height: 13rem;
+  max-height: 15rem;
   background-color: #333333;
 }
 
@@ -5558,7 +5557,6 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   background-color: #413552;
 }
 .mobile-sidebar--button i:before {
-  color: #FFFFFF;
   font-size: 2rem;
 }
 
@@ -5571,6 +5569,58 @@ i.dashing-icon--pause.dashing-clippy:before, .app-menu .app-context .app-title .
   margin-left: 1rem;
 }
 
+.mobile-profile--account {
+  margin-top: 1.5rem;
+  padding: 1rem;
+  display: block;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr auto auto;
+}
+.mobile-profile--account .profile-image {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  background-color: #E0E0E0;
+  margin-right: auto;
+  float: left;
+}
+.mobile-profile--account .profile-name {
+  color: #FFFFFF;
+  font-size: 1.25rem;
+  font-weight: 600;
+  grid-column: 1/3;
+  clear: both;
+  padding: 0.5rem 0rem;
+}
+.mobile-profile--account .profile-email {
+  color: #FFFFFF;
+  grid-column: 1/3;
+}
+.mobile-profile--account .profile-edit {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  float: right;
+}
+.mobile-profile--account .profile-edit i:before {
+  color: #FFFFFF;
+}
+
+@supports (display: grid) {
+  .mobile-profile--account > * {
+    width: auto;
+  }
+
+  .mobile-profile--account {
+    display: grid;
+  }
+}
 .example-flex {
   overflow: auto;
 }
